add bootstrap successfuly

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -7,6 +7,7 @@
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <link rel="stylesheet" href="/css/main.min.css">
+  <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" type="text/css">
 </head>
 <body class="{{template}}">
   <div class="container">
