--- a/views/layouts/registration.hbs
+++ b/views/layouts/registration.hbs
@@ -6,8 +6,8 @@
   <title>Best Website</title>
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-
-  <link rel="stylesheet" href="/css/main.min.css">
+  
+  <link rel="stylesheet" href="/css/main.min.css" type="text/css">
   
 </head>
 <body class="{{template}}">
