--- a/views/partials/side-nav.hbs
+++ b/views/partials/side-nav.hbs
@@ -1,1 +1,27 @@
-azeazeazeaze
+<div id="side-bar" class="bg-dark text-white col-2 " >
+    
+    <main>
+        <!-- links list-->
+        <div >
+            <ul class="list-group border-0">
+                <li class="list-group-item border-0 bg-dark ">Home</li>   
+                <li class="list-group-item border-0 bg-dark ">About</li>  
+                <li class="list-group-item border-0 bg-dark ">Terms</li>        
+            </ul>
+        </div>
+        <!-- end links list-->
+
+        <!-- small about me -->
+        <div></div>
+        <!-- end small about me -->
+
+        <!-- what people saying about us -->
+        <div></div>
+        <!-- what people saying about us --> 
+    </main>
+
+    <footer>
+
+    </footer>
+   
+</div>
