--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,19 +1,24 @@
+<div class="col-10"> 
+   {{> nav-bar-controller}}
+  <div  class="mt-5" id="signup-form">
+      <form  action="/signup/" method="post">
+        <div class="form-group">
+          <label for="exampleInputUsername">Username</label>
+          <input name="username" type="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp">
+        </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+        <div class="form-group">
+          <label   for="exampleInputPassword1">Password</label>
+          <input  name="password" type="password" class="form-control" id="exampleInputPassword1">
+        </div>
 
-<form  action="/signup/" method="post">
-      <div class="form-group">
-    <label for="exampleInputUsername">Username</label>
-    <input name="username" type="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp">
+        <button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
+    </form>
     
   </div>
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
-  <div class="form-group">
-    <label   for="exampleInputPassword1">Password</label>
-    <input  name="password" type="password" class="form-control" id="exampleInputPassword1">
-  </div>
-
-  <button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
-</form>
+  
+</div>
