--- a/views/partials/side-nav.hbs
+++ b/views/partials/side-nav.hbs
@@ -11,8 +11,9 @@
         </div>
         <!-- end links list-->
 
-        <!-- small about me -->
-        <div></div>
+        <!-- small about me -->     
+        <article class="mt-4"> Recipeprog is a web app to help those who want learn to cook,
+            its a place where you can track your progress and share recipes with others</article>
         <!-- end small about me -->
 
         <!-- what people saying about us -->
