controle hiding and showing signout when user is_auth

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,28 +1,6 @@
-<div class="col-10"> 
-   {{> nav-bar-controller}}
-   <div class="mt-5">
-      <h1 class="h2 text-center">ReciProg Signup form</h1>
-   </div>
-  <div class="pt-10" id="signup-form">
-      <form class="form-center" action="/signup/" method="post">
-        <div class="form-group">
-          <label for="exampleInputUsername">Username</label>
-          <input name="username" type="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp">
-        </div>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Email address</label>
-          <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-          
-        </div>
-        <div class="form-group">
-          <label   for="exampleInputPassword1">Password</label>
-          <input  name="password" type="password" class="form-control" id="exampleInputPassword1">
-          <small id="passwordHelp" class="form-text text-muted">use strong password please</small>
-        </div>
-
-        <button id="submit-btn" type="submit" class="btn btn-primary">Submit</button>
-    </form>
+<div class="col-10">
     
-  </div>
-  
+    {{> nav-bar-controller}}
+    <div> home page after signup</div>
+   
 </div>
