add signup and switch forms

--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,6 +1,6 @@
 <div class="col-10">
     
     {{> nav-bar-controller}}
-    <div> home page after signup</div>
+    <h1> home page after signup</h1>
    
 </div>
