--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -6,8 +6,10 @@
   <title>Best Website</title>
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" type="text/css">
+
 </head>
 <body class="{{template}}">
   <div class="container-fluid">  
@@ -19,6 +21,6 @@
   </div>
   {{> footer}}
 </body>
-
+<script src="../js/swtichForms.js"></script>
 <script src="../js/registration.js"></script>
 </html>
