--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -20,8 +20,8 @@
         <div>
           <h1 class="h2 text-center">ReciProg Signup form</h1>
         </div>
-         <div class="pt-10" id="signup-form">
-        <form  action="/signup/" method="post">
+         <div class="pt-10" >
+        <form  id="signup-form" action="/signup/" method="post">
           <div class="form-group">
             <label for="exampleInputUsername">Username</label>
             <input name="username" type="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp">
@@ -37,7 +37,7 @@
             <small id="passwordHelp" class="form-text text-muted">use strong password please</small>
           </div>
 
-          <button id="signup-submit-btn" type="submit" class="btn btn-primary">Submit</button>
+          <button id="signup-submit-btn" for='signup-form'type="submit" class="btn btn-primary">Submit</button>
         </form>
       
       </div>
@@ -53,16 +53,16 @@
          
           <form action="/login/" method="post">
             <div class="form-group">
-              <label for="exampleInputUsername">Username</label>
-              <input name="username" type="username" class="form-control" id="exampleInputUsername" aria-describedby="usernameHelp">
+              <label for="exampleInputUsername1">Username</label>
+              <input name="usernameLogin" type="text" class="form-control" id="exampleInputUsername1" aria-describedby="usernameHelp">
             </div>
             <div class="form-group">
-              <label   for="exampleInputPassword1">Password</label>
-              <input  name="password" type="password" class="form-control" id="exampleInputPassword1">
+              <label   for="exampleInputPassword2">Password</label>
+              <input  name="passwordLogin" type="password" class="form-control" id="exampleInputPassword2">
               <small id="passwordHelp" class="form-text text-muted">use strong password please</small>
             </div>
 
-            <button id="login-submit-btn" type="submit" class="btn btn-primary">Submit</button>
+            <button id="login-submit-btn" for='login-form' type="submit" class="btn btn-primary">Submit</button>
           </form>
         
         </div>
