--- a/views/partials/side-nav.hbs
+++ b/views/partials/side-nav.hbs
@@ -1,12 +1,18 @@
-<div id="side-bar" class="bg-dark text-white col-2 " >
+<div id="side-bar" class="bg-black text-white col-2 " >
     
     <main>
         <!-- links list-->
         <div >
             <ul class="list-group border-0">
-                <li class="list-group-item border-0 bg-dark ">Home</li>   
-                <li class="list-group-item border-0 bg-dark ">About</li>  
-                <li class="list-group-item border-0 bg-dark ">Terms</li>        
+                <li class="list-group-item border-0">
+                    <a  class="text-white" href="/">Home</a>
+                </li>   
+                <li class="list-group-item border-0 ">
+                    <a  class="text-white" href="/about">About</a>
+                </li>  
+                <li class="list-group-item border-0 ">
+                    <a   class="text-white" href="/terms">Terms</a>
+                </li>        
             </ul>
         </div>
         <!-- end links list-->
