fix registration bar and better buttons

--- a/views/partials/nav-bar-controller.hbs
+++ b/views/partials/nav-bar-controller.hbs
@@ -1,4 +1,4 @@
-  <div class=" h-20 border-bottom ">
+  <div class=" h-20 border-grey-b ">
     <div class="w-100 ">
       <div class="float-right">        
         {{# if is_authenticated}}
