--- a/views/partials/side-nav.hbs
+++ b/views/partials/side-nav.hbs
@@ -1,4 +1,4 @@
-<div id="side-bar" class="bg-black text-white col-2 " >
+<div id="side-bar" class="bg-black text-white col-2 border-grey-l " >
     
     <main>
         <!-- links list-->
