--- a/views/partials/side-nav.hbs
+++ b/views/partials/side-nav.hbs
@@ -1,24 +1,38 @@
-<div id="side-bar" class="bg-black text-white col-2 border-grey-l " >
+<div id="side-bar" class="bg-black text-white w-20 border-grey-l " >
     
     <main>
         <!-- links list-->
         <div >
             <ul class="list-group border-0">
-                <li class="list-group-item border-0">
-                    <a  class="text-white" href="/">Home</a>
+                <li class="list-group-item border-0 text-center">
+                    <a title="home page" class="text-green f-rem-2 side-nav-link" href="/">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-house-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M8 3.293l6 6V13.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5V9.293l6-6zm5-.793V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                        <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+                        </svg>
+                    </a>
                 </li>   
-                <li class="list-group-item border-0 ">
-                    <a  class="text-white" href="/about">About</a>
+                <li class="list-group-item border-0 text-center">
+                    <a title="about us" class="text-green f-rem-2 side-nav-link" href="/about">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-question-square-fill" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm4.57 6.033H5.25C5.22 4.147 6.68 3.5 8.006 3.5c1.397 0 2.673.73 2.673 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.355H7.117l-.007-.463c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.901 0-1.358.603-1.358 1.384zm1.251 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z"/>
+                        </svg>
+                    </a>
                 </li>  
-                <li class="list-group-item border-0 ">
-                    <a   class="text-white" href="/terms">Terms</a>
+                <li class="list-group-item border-0 text-center">
+                    <a  title="our terms" class="text-green f-rem-2 side-nav-link" href="/terms">
+                        <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-card-checklist" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" d="M14.5 3h-13a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
+                        <path fill-rule="evenodd" d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
+                        </svg>
+                    </a>
                 </li>        
             </ul>
         </div>
         <!-- end links list-->
 
         <!-- small about me -->     
-        <article class="mt-4"> Recipeprog is a web app to help those who want learn to cook,
+        <article class="mt-4 text-center"> Recipeprog is a web app to help those who want learn to cook,
             its a place where you can track your progress and share recipes with others</article>
         <!-- end small about me -->
 
