--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -1,15 +1,15 @@
-<div class="col-10"> 
+<div id="main-page" class="w-80"> 
    {{> nav-bar-controller}}
    
   <div id="registration-form" class="container mt-5 form-center">
     <!-- navbar container -->
       <div class="text-center mb-4">
         <ul class="nav nav-tabs card-header-tabs row">
-          <li class="nav-item col-6">
-            <a  goto='signup' class=" bg-green nav-link nav-registration  active " href="#signup">Signup</a>
+          <li class="nav-item col-6 ">
+            <a  goto='signup' class=" link-bg-green nav-link nav-registration  active " href="#signup">Signup</a>
           </li>
           <li class="nav-item  col-6">
-            <a goto='login' class=" bg-green nav-link nav-registration" href="#login">Login</a>
+            <a goto='login' class=" link-bg-green nav-link nav-registration" href="#login">Login</a>
           </li>
         </ul>
       </div>
