--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -13,7 +13,7 @@
 </head>
 <body class="{{template}}">
   <div class="container-fluid">  
-    <div class="row">
+    <div class="d-flex flex-row">
       {{{body}}}           
       {{> side-nav}}
     </div>
@@ -21,6 +21,6 @@
   </div>
   {{> footer}}
 </body>
-<script src="../js/swtichForms.js"></script>
-<script src="../js/registration.js"></script>
+
+<script src="../js/main.js"></script>
 </html>
