--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -6,7 +6,10 @@
   <title>Best Website</title>
   <meta name="HandheldFriendly" content="True" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
+  >
   <link rel="stylesheet" href="../css/main.css">
   <link rel="stylesheet" href="../bootstrap/dist/css/bootstrap.css" type="text/css">
 
