add progress abr

--- a/views/partials/nav-bar-controller.hbs
+++ b/views/partials/nav-bar-controller.hbs
@@ -3,7 +3,7 @@
       <div class="float-right ">  
         <div class="d-flex flex-row">
           {{# if is_authenticated}}
-          <a  class="btn-green" href="/logout">logout</a> 
+          <a  class="btn-green m-1" href="/logout">logout</a> 
           {{/if}}  
           <div title="hide / show side bar" id="side-nav-hideshow">
             <svg   class="bi bi-grid-fill m-2 text-green" width="1.6rem" height="1.6rem" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
