--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,14 @@
+progress {
+    -webkit-appearance:none ;
+    
+  }
+progress::-webkit-progress-bar {
+    background-color:grey;
+  }
+  progress::-webkit-progress-value {
+    background-color: #19AC85;
+  }
+
 /* grids and flex boxes */
 .grid-2-auto{
     column-count: 2;
@@ -38,6 +49,16 @@
     max-height: 18vh;
     min-height: 10vh;
 }
+.h-45{
+    height: 60%;
+    max-height: 60vh;
+    min-height: 60vh;
+}
+.h-2px{
+    height: 2px;
+    max-height: 4px;
+    min-height: 2px;
+}
 #side-bar{
     height: 100vh;
 }
@@ -47,7 +68,15 @@
 }
 
 /* centering */
-
+.center{
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: auto;
+    text-align: center;
+    min-height: 100%;
+    height: 100%;
+    width: 100%;
+}
 .form-center{
    
     display: grid;
@@ -63,11 +92,14 @@
 .f-rem-2{
     font-size: 2.2rem;
 }
+.f-rem-1-5{
+    font-size: 1.5rem;
+}
 /* font text color */
 .text-green{
     color : #19AC85;
 }
-
+text
 .side-nav-link{
     color: #19AC85;
 }
@@ -90,6 +122,13 @@
     background-color: #19AC85;
     color:white;
 }
+.bg-grey{
+background-color: #4A5967;
+}
+.black-back-50{
+    background: linear-gradient(90deg,#232F3A 66% ,#35434f 34%);
+}
+
 
 /* button background color */
 .link-bg-green {
@@ -137,4 +176,17 @@
 .border-grey-b{
     border-bottom: 1px solid #4A5967;
 }
+.border-grey-t{
+    border-top: 1px solid #4A5967;
+}
 
+/* image */
+.profile-image{
+    max-width: 50%;
+    height: auto;
+    display: block;
+}
+
+.profile-image-container{
+    max-width: fit-content;
+}
