--- a/views/partials/nav-bar-controller.hbs
+++ b/views/partials/nav-bar-controller.hbs
@@ -1,7 +1,7 @@
   <div class=" h-20 border-grey-b ">
     <div class="w-100 ">
       <div class="float-right ">  
-        <div class="d-flex flex-row">
+        <div class="d-flex flex-row justify-content-center">
           {{# if is_authenticated}}
           <a  class="btn-green m-1" href="/logout">logout</a> 
           {{/if}}  
