--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -25,6 +25,10 @@
   </div>
   {{> footer}}
 </body>
-
+<script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
 <script src="../js/main.js"></script>
+<script src="../bootstrap/dist/js/bootstrap.js"></script>
 </html>
