--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -48,10 +48,39 @@
             <div class="d-flex p-4 ">
 
                 <div class="card w-25">
-                    <div>
-                     
-                    </div>
+                    <button  type="button" class="btn btn-light " data-toggle="modal" data-target="#new-recipe-modal"></button>
+
+
                 </div>
+                <div class="modal fade" id="new-recipe-modal" tabindex="-1" role="dialog" aria-labelledby="NewRecipeLabel" aria-hidden="true">
+                    <div class=" modal-dialog  modal-xl mt-5 ">
+                        <div class="modal-content p-5">
+                            <div class="container">
+                                <header class="my-5">
+                                    <h3 class="h3 text-center ">Add new recipe</h3>
+                                </header>
+                                 
+                                <div class="row">
+                                    <div class="col-md-6 col-sm-12">photo</div>
+                                    <div class="col-md-6 col-sm-12">
+                                       
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="email">Name</label>
+                                                <input type="text" class="form-control" id="email" aria-describedby="emailHelp">                                    
+                                            </div>
+                                             <div class="form-group">
+                                                <label for="notes">Notes</label>
+                                                <textarea class="form-control" name="notes" id="notes" aria-describedby="notesHelp"></textarea>                                    
+                                            </div>
+                                            <button id="add-recipe-submit-btn" class="btn-green">Submit</button>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </div> 
+                    </div>                                       
+                </div> 
             </div> 
         </div>
     </div>    
