--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -31,4 +31,5 @@
   crossorigin="anonymous"></script>
 <script src="../js/main.js"></script>
 <script src="../bootstrap/dist/js/bootstrap.js"></script>
+<script src="https://kit.fontawesome.com/516f647623.js" crossorigin="anonymous"></script>
 </html>
