--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -48,7 +48,9 @@
             <div class="d-flex p-4 ">
 
                 <div class="card w-25">
-                    <button  type="button" class="btn btn-light " data-toggle="modal" data-target="#new-recipe-modal"></button>
+                    <button  title="add new recipe" type="button" class="btn btn-light" data-toggle="modal" data-target="#new-recipe-modal">
+                        <i class="fas fa-plus fa-5x fa-lg m-5  text-hover-muted"></i>
+                    </button>
 
 
                 </div>
