--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -16,7 +16,8 @@
 
 </head>
 <body class="{{template}}">
-  <div class="container-fluid">  
+  <div id="messages"></div>
+  <div class="container-fluid"> 
     <div class="d-flex flex-row">
       {{{body}}}           
       {{> side-nav}}
