--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -68,12 +68,12 @@
                                        
                                         <form>
                                             <div class="form-group">
-                                                <label for="email">Name</label>
-                                                <input type="text" class="form-control" id="email" aria-describedby="emailHelp">                                    
+                                                <label for="name">Name</label>
+                                                <input name="name" type="text" class="form-control" id="name" aria-describedby="nameHelp">                                    
                                             </div>
                                              <div class="form-group">
                                                 <label for="notes">Notes</label>
-                                                <textarea class="form-control" name="notes" id="notes" aria-describedby="notesHelp"></textarea>                                    
+                                                <textarea   class="form-control" name="notes" id="notes" aria-describedby="notesHelp"></textarea>                                    
                                             </div>
                                             <button id="add-recipe-submit-btn" class="btn-green">Submit</button>
                                         </form>
