add drag and drop

--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -65,7 +65,15 @@
                                 </header>
                                  
                                 <div class="row">
-                                    <div class="col-md-6 col-sm-12">photo</div>
+                                    <div class="col-md-6 col-sm-12 h-100">
+                                        <div   class="file-input">   
+                                            <label class=" text-muted text-center" for="image"> 
+                                                <i class="fas fa-download"></i><br>
+                                                choose an image or drag and drop a one here
+                                            </label>      
+                                            <input type="file" id="image" multiple>
+                                        </div>  
+                                    </div>
                                     <div class="col-md-6 col-sm-12">
                                        
                                         <form>
