--- a/public/css/main.css
+++ b/public/css/main.css
@@ -178,6 +178,9 @@ background-color: #4A5967;
     color: white;
     border: 1px solid #19AC85;
     border-radius: 7%;
+    
+}
+.btn-green, .btn{
     padding: 0.5em 0.8em 0.5em 0.8em;
 }
 
@@ -198,6 +201,42 @@ background-color: #4A5967;
     color: white;
     border: 4px solid  #19AC85;
 
+}
+
+.droped-image{
+    display: block;
+    z-index: 5;
+    width:100%;
+    max-width:100%; 
+    max-height:100%;  
+  }
+.file-input input{
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+.file-input label{
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+}
+
+.file-input{
+    max-width: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    border: 1px dashed #4f86c3;
+    
+}
+.file-input:hover{
+    background-color: beige;
+}
+.file-input:active{
+    border: 1px solid #4f86c3;
+    box-shadow: inset 0 0 0 #4f86c3, 0px 10px 20px -10px #4f86c3;
 }
 
 /* border */
